[package]
name = "wave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
color-eyre = "0.6.5"
cpal = "0.17.3"
crossterm = "0.29.0"
directories = "6.0.0"
lazy_static = "1.5.0"
ratatui = "0.30.0"
rusqlite = "0.39.0"
rustfft = "6.4.1"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
